--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -14,6 +14,9 @@ jobs:
         os: [windows-latest, macos-latest, ubuntu-latest]
         arch: [x64]
         node: [18.x, 19.x, 20.x, 21.x, 22.x, 23.x, 24.x]
+        exclude:
+          - os: windows-latest
+            node: 23.x
     timeout-minutes: 30
     steps:
       - if: ${{ matrix.os == 'ubuntu-latest' }}
